# dev-pomogator

./: .dev-pomogator-tmp-fix.cjs  .dockerignore  .env.example  .gitattributes  .gitignore  .lsp.json  .mcp.json  .npmignore  .pre-commit-config.yaml  .root-artifacts.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.gui  Dockerfile.test  Dockerfile.test.base  README.md  cucumber.json  dev-pomogator.sln  docker-compose.gui.yml  docker-compose.test.yml  install  install.ps1  install.sh  package-lock.json  package.json  stryker.bdd.config.mjs  stryker.config.mjs  stryker.real.config.mjs  stryker.specgen.config.mjs  tsconfig.json  uninstall.ps1  vitest.config.ts  vitest.mutation.config.ts  vitest.specgen.config.ts
.claude/: settings.json  settings.json.bak  settings.local.json  (+1 more)
.claude-plugin/: hooks.json  marketplace.json  plugin.json
extensions/tui-test-runner/tools/tui-test-runner/tui/: __main__.py  app.py  discovery.py  log_reader.py  models.py  pyproject.toml  yaml_reader.py
extensions/tui-test-runner/tools/tui-test-runner/tui/analyst/: code_reader.py  output.py  parsers.py  patterns.py  patterns.yaml
extensions/tui-test-runner/tools/tui-test-runner/tui/widgets/: analysis_tab.py  compact_bar.py  monitoring_tab.py  tests_tab.py
tests/fixtures/onboard-repo-fake-repos/fake-python-api/: .env.example  .gitignore  README.md  pyproject.toml
tests/fixtures/onboard-repo-fake-repos/fake-python-api/src/: main.py
tests/fixtures/onboard-repo-fake-repos/fake-python-api/src/routes/: users.py
tests/fixtures/onboard-repo-fake-repos/fake-python-api/tests/: test_main.py
(+3165 files in other folders)
